--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body::before{
     height: 70px;
 }
 
+#map{
+    width: 100%;
+border-radius: 10px;
+    height: 100%;
+}
 
 @media(min-width:768px){
     .newsinput{
